# docs/swagger.yaml
@@ -40,6 +40,29 @@ info:
   title: QB blog Swagger API
   version: "1.0"
 paths:
+  /api/v1/user/list:
+    get:
+      consumes:
+      - application/json
+      description: get user list
+      parameters:
+      - description: 关键字
+        in: query
+        name: keyWords
+        type: string
+      - description: 用户角色
+        in: query
+        name: role
+        type: string
+      - description: 注册时间
+        in: query
+        name: creatTime
+        type: string
+      produces:
+      - application/json
+      summary: 获取用户列表
+      tags:
+      - accounts
   /api/v1/user/login:
     post:
       consumes:
